--- a/app.json
+++ b/app.json
@@ -9,9 +9,15 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.firstTry.findplace",
+      "config": {
+        "googleMapsApiKey": "AIzaSyBLRzCPLN0QRPE5CaH7kP5UTxz4slIHItc"
+      }
     },
     "android": {
+      "package": "com.firstTry.findplace",
+      "googleMapsApiKey": "AIzaSyBLRzCPLN0QRPE5CaH7kP5UTxz4slIHItc",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -38,7 +44,14 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
